# bochi

./: CHANGELOG.md  Cargo.toml  NOTES_TO_HUMAN.md  README.md  SKILL.md
src/: adb_utils.rs  main.rs  selector.rs  ui_element.rs
