[package]
name = "bochi"
version = "0.2.0"
edition = "2021"
authors = ["Mengxiao Lin <linmx0130@gmail.com>"]
description = "A CLI tool to interact with Android UI elements with CSS-like selectors."
license = "MIT"
repository = "https://github.com/linmx0130/bochi"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
roxmltree = "0.21"
regex = "1.12"
